tests/golden/invalid/default-index.rego
package fregot.tests.invalid.default_index

default power_level = 9001

power_level[character] = level {
  character = "Goku"
}
